add download btn

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <a href="#personality" class="nav-link">성격</a>
                 <a href="#first-meeting" class="nav-link">첫 만남</a>
                 <a href="#gallery" class="nav-link">갤러리</a>
+                <a href="https://drive.proton.me/urls/5JD5MM1250#XLwwASLSJeKw" class="nav-link download-link" target="_blank">다운로드</a>
             </div>
             <div class="nav-toggle" id="navToggle">
                 <span></span>
@@ -52,6 +53,14 @@
             </h1>
             <p class="hero-subtitle">난 길고양이니까.</p>
             <div class="hero-name">제퍼 케인</div>
+            <div class="hero-actions">
+                <a href="https://drive.proton.me/urls/5JD5MM1250#XLwwASLSJeKw" class="download-btn" target="_blank">
+                    <svg class="download-icon" viewBox="0 0 24 24">
+                        <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
+                    </svg>
+                    <span>제퍼 다운로드</span>
+                </a>
+            </div>
         </div>
         <div class="scroll-indicator">
             <div class="scroll-arrow"></div>
