index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </p>
                     
                     <blockquote class="backstory-quote">
-                        "살아남으려면, 네 스스로 강해져야 해."
+                        "살아남으려면, 너 스스로 강해져야 해."
                     </blockquote>
                     
                     <p class="backstory-paragraph">
